# gdk-pixbuf

./: .gitlab-ci.yml  CONTRIBUTING.md  Makefile.am  NEWS  README.md  README.msvc  autogen.sh  config.h.win32.in  configure.ac  gdk-pixbuf-2.0-uninstalled.pc.in  gdk-pixbuf-2.0.pc.in  gdk-pixbuf.doap  glib.mk  meson.build  meson_options.txt
.gitlab/ci/: Dockerfile  fedora.Dockerfile  run-docker.sh  test-docker.sh  test-msys2.sh
build-aux/: gen-resources.py  post-install.bat  post-install.sh
contrib/gdk-pixbuf-xlib/: Makefile.am  gdk-pixbuf-xlib-drawable.c  gdk-pixbuf-xlib-render.c  gdk-pixbuf-xlib.c  gdk-pixbuf-xlibrgb.c  meson.build
docs/: gdk-pixbuf-from-drawables.xml  gdk-pixbuf-query-loaders.xml  gdk-pixbuf-rendering.xml  gdk-pixbuf-sections.txt  gdk-pixbuf.toml.in  gdk-pixbuf.xml  meson.build
docs/reference/gdk-pixbuf/: Makefile.am  gdk-pixbuf-csource-2.0.xml  gdk-pixbuf-query-loaders-2.0.xml  gdk-pixbuf-sections.txt  gdk-pixbuf.sgml  gdk-pixbuf.xml  meson.build
gdk-pixbuf/: Makefile.am  gdiplus.def  gdk-pixbuf-animation.c  gdk-pixbuf-animation.h  gdk-pixbuf-autocleanups.h  gdk-pixbuf-core.h  gdk-pixbuf-csource.c  gdk-pixbuf-data.c  gdk-pixbuf-enum-types.c.template  gdk-pixbuf-enum-types.h.template  gdk-pixbuf-features.h.in  gdk-pixbuf-i18n.h  gdk-pixbuf-io.c  gdk-pixbuf-io.h  gdk-pixbuf-loader.c  gdk-pixbuf-loader.h  gdk-pixbuf-macros.h  gdk-pixbuf-pixdata.c  gdk-pixbuf-private.h  gdk-pixbuf-scale.c  gdk-pixbuf-scaled-anim.c  gdk-pixbuf-scaled-anim.h  gdk-pixbuf-simple-anim.c  gdk-pixbuf-simple-anim.h  gdk-pixbuf-util.c  gdk-pixbuf.c  gdk-pixbuf.h  gdk-pixbuf.symbols  gdk-pixdata.c  gdk-pixdata.h  gdk_pixbuf.rc.in  io-android-bmp.c  io-android-gif.c  io-android-heif.c  io-android-ico.c  io-android-jpeg.c  io-android-png.c  io-android-utils.c  io-android-utils.h  io-android-wbmp.c  (+61 more)
gdk-pixbuf/pixops/: Makefile.am  meson.build  pixops.c
m4/: .gitignore
po/: ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ab.po  af.po  am.po  ang.po  ar.po  as.po  ast.po  az.po  az_IR.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  (+76 more)
subprojects/: gi-docgen.wrap  glib.wrap  libjpeg.wrap  libpng.wrap
tests/: Makefile.am  animation.c  cve-2015-4491.c  meson.build  pixbuf-area-updated.c  pixbuf-composite.c  pixbuf-construction.c  pixbuf-dpi.c  pixbuf-fail.c  pixbuf-gif-circular-table.c  pixbuf-gif.c  pixbuf-icc.c  pixbuf-icon-serialize.c  pixbuf-jp2.c  pixbuf-jpeg.c  pixbuf-lowmem.c  pixbuf-pixdata.c  pixbuf-random.c  pixbuf-randomly-modified.c  pixbuf-randomly-modified.test.in  pixbuf-read.c  pixbuf-readonly-to-mutable.c  pixbuf-reftest.c  pixbuf-resource.c  pixbuf-save-ref.c  pixbuf-save.c  pixbuf-scale-two-step.c  pixbuf-scale.c  pixbuf-short-gif-write.c  pixbuf-slow-load.c  pixbuf-stream.c  pixbuf-threads.c  pixbuf-threads.test.in  resources.gresource.xml  test-common.c  test-common.h
tests/test-images/fail/: CVE-2022-48622.ani
tests/test-images/gif-test-suite/: 255-codes.conf  4095-codes-clear.conf  4095-codes.conf  TESTS  all-blues.conf  all-greens.conf  all-reds.conf  animation-erase.1.rgba  animation-erase.2.rgba  animation-multi-image-explicit-zero-delay.conf  animation-multi-image.conf  animation-no-delays.conf  animation-speed.conf  animation-zero-delays.conf  animation.conf  comment.conf  depth1.conf  depth2.conf  depth3.conf  depth4.conf  depth5.conf  depth6.conf  depth7.conf  depth8.conf  disabled-transparent.conf  dispose-keep.conf  dispose-none.conf  dispose-restore-background.conf  dispose-restore-previous.conf  double-clears.conf  extra-data.conf  extra-pixels.conf  four-colors.conf  gif87a-animation.conf  gif87a.conf  high-color.conf  icc-color-profile-empty.conf  icc-color-profile.conf  image-inside-bg.conf  image-inside-bg.rgba  (+39 more)
tests/test-images/randomly-modified/: valid.1.jp2
tests/test-images/tga/: gtk-logo-32bpp-bottom-left.tga  gtk-logo-32bpp-bottom-right.tga  gtk-logo-32bpp-top-left.tga  gtk-logo-32bpp-top-right.tga  gtk-logo-cmap-8bpp-bottom-left.tga  gtk-logo-cmap-8bpp-bottom-right.tga  gtk-logo-cmap-8bpp-top-left.tga  gtk-logo-cmap-8bpp-top-right.tga  gtk-logo-cmap-rle-8bpp-bottom-left.tga  gtk-logo-cmap-rle-8bpp-bottom-right.tga  gtk-logo-cmap-rle-8bpp-top-right.tga  gtk-logo-gray-8bpp-bottom-left.tga  gtk-logo-gray-8bpp-bottom-right.tga  gtk-logo-gray-8bpp-top-left.tga  gtk-logo-gray-8bpp-top-right.tga  gtk-logo-gray-rle-8bpp-bottom-left.tga  gtk-logo-gray-rle-8bpp-bottom-right.tga  gtk-logo-gray-rle-8bpp-top-left.tga  gtk-logo-gray-rle-8bpp-top-right.tga  gtk-logo-rle-32bpp-bottom-left.tga  gtk-logo-rle-32bpp-bottom-right.tga  gtk-logo-rle-32bpp-top-left.tga  gtk-logo-rle-32bpp-top-right.tga
thumbnailer/: Makefile.am  gdk-pixbuf-print-mime-types.c  gdk-pixbuf-thumbnailer.c  gen-thumbnailer.py  gnome-thumbnailer-skeleton.c  meson.build
win32/: Makefile.am
win32/vs10/: Makefile.am  README.txt  gdk-pixbuf-build-defines.props  gdk-pixbuf-csource.vcxproj  gdk-pixbuf-csource.vcxproj.filters  gdk-pixbuf-gen-srcs.props  gdk-pixbuf-install.propsin  gdk-pixbuf-install.vcxproj  gdk-pixbuf-install.vcxproj.filters  gdk-pixbuf-introspect.vcxproj  gdk-pixbuf-pixdata.vcxproj  gdk-pixbuf-pixdata.vcxproj.filters  gdk-pixbuf-query-loaders.vcxproj  gdk-pixbuf-query-loaders.vcxproj.filters  gdk-pixbuf-version-paths.props.in  gdk-pixbuf.sln  gdk-pixbuf.vcxproj.filtersin  gdk-pixbuf.vcxprojin
win32/vs11/: Makefile.am
win32/vs12/: Makefile.am
win32/vs14/: Makefile.am
win32/vs15/: Makefile.am
win32/vs9/: Makefile.am  README.txt  gdk-pixbuf-build-defines.vsprops  gdk-pixbuf-csource.vcproj  gdk-pixbuf-gen-srcs.vsprops  gdk-pixbuf-install.vcproj  gdk-pixbuf-install.vspropsin  gdk-pixbuf-introspect.vcproj  gdk-pixbuf-pixdata.vcproj  gdk-pixbuf-query-loaders.vcproj  gdk-pixbuf-version-paths.vsprops.in  gdk-pixbuf.sln  gdk-pixbuf.vcprojin
