option('png',
       description: 'Enable PNG loader (requires libpng). Add "png" to builtin_loaders to build this loader into gdk-pixbnf, otherwise it will be a shared module',
       type: 'boolean',
       value: true)
option('tiff',
       description: 'Enable TIFF loader (requires libtiff). Add "tiff" to builtin_loaders to build this loader into gdk-pixbnf, otherwise it will be a shared module',
       type: 'boolean',
       value: true)
option('jpeg',
       description: 'Enable JPEG loader (requires libjpeg). Add "jpeg" to builtin_loaders to build this loader into gdk-pixbnf, otherwise it will be a shared module',
       type: 'boolean',
       value: true)
option('jasper',
       description: 'Enable JPEG2000 loader (requires libjasper). Add "jasper" to builtin_loaders to build this loader into gdk-pixbnf, otherwise it will be a shared module',
       type: 'boolean',
       value: false)
option('x11',
       description: 'Enable X11 support (requires libX11). Always a dynamic module, cannot be built into gdk-pixbuf, otherwise it will be a shared module',
       type: 'boolean',
       value: true)
option('builtin_loaders',
       description: 'Comma-separated list of loaders to build into gdk-pixbuf, or "none", or "all" to build all buildable (enabled) loaders into gdk-pixbuf',
       type: 'string',
       value: 'none')
option('docs',
       description: 'Whether to generate the API reference (requires GTK-Doc)',
       type: 'boolean',
       value: false)
option('gir',
       description: 'Whether to generate the API introspection data (requires GObject-Introspection)',
       type: 'boolean',
       value: true)
option('man',
       description: 'Whether to generate man pages (requires xlstproc)',
       type: 'boolean',
       value: true)
option('relocatable',
       description: 'Whether to enable application bundle relocation support',
       type: 'boolean',
       value: false)
option('gdip',
       description: 'Enable Windows GDI+ support (requires Windows). Add "gdip-bmp", "gdip-emf", "gdip-gif", "gdip-ico", "gdip-jpeg", "gdip-tiff" and "gdip-wmf" to builtin_loaders to build some of these GDI+ loaders into gdk-pixbnf (or "windows" to build in all of them), otherwise they will be shared modules',
       type: 'boolean',
       value: true)
option('prefer_native_windows_loaders',
       description: 'Disables "bmp", "gif", "ico", "jpeg" and "tiff" loaders if their "gdip-" counterparts are available',
       type: 'boolean',
       value: false)
option('installed_tests',
       description: 'Install the test suite',
       type: 'boolean',
       value: true)
option('gio_sniffing',
       description: 'Perform file type detection using GIO (Unused on MacOS and Windows)',
       type: 'boolean',
       value: true)

